--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 assets/images/.DS_Store
 hugo.yaml
 *.yaml
+static/.DS_Store
+public/.DS_Store
+assets/images/.DS_Store
+assets/.DS_Store
+.DS_Store
